Letras maiusculas adicionadas no menu principal

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 			</h1>
 			<nav class="menu-principal">
 				<ul>
-					<li><a href="#sobre">sobre</a></li>
-					<li><a href="#planos">planos</a></li>
-					<li><a href="#blog">blog</a></li>
-					<li><a href="#contato">contato</a></li>
+					<li><a href="#sobre">Sobre</a></li>
+					<li><a href="#planos">Planos</a></li>
+					<li><a href="#blog">Blog</a></li>
+					<li><a href="#contato">Contato</a></li>
 				</ul>
 			</nav>
 		</div>
